--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,4 +77,5 @@
     <string name="pref_title_vibrate">Vibrate</string>
     <string name="delete_stats_for_selected_polygon">Delete stats for selected polygon</string>
     <string name="delete_all_statistics">Delete all statistics</string>
+    <string name="statistics">Statistics</string>
 </resources>
