--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,7 +71,7 @@
 
     <string name="pref_title_new_message_notifications">New message notifications</string>
 
-    <string name="pref_title_ringtone" translatable="false">Ringtone</string>
+    <string name="pref_title_ringtone">Ringtone</string>
     <string name="pref_ringtone_silent">Silent</string>
 
     <string name="pref_title_vibrate">Vibrate</string>
@@ -83,9 +83,9 @@
     <string name="wall_hit_summary">How much percentage ball loses when hits wall</string>
     <string name="wall_hit_title">Wall hit defect (0..1)</string>
     <string name="choose_polygon">Choose polygon</string>
-    <string name="preference_traction_key" translatable="false">TRACTION_KEY</string>
-    <string name="preference_collision" translatable="false">BUMP_KEY</string>
-    <string name="preference_player_name" translatable="false">PLAYER_NAME</string>
+    <string name="preference_traction_key">TRACTION_KEY</string>
+    <string name="preference_collision">BUMP_KEY</string>
+    <string name="preference_player_name">PLAYER_NAME</string>
     <string name="main_there_are_no_available_polygons">There are no available polygons</string>
     <string name="stats_for_polygon">Statistics for polygon:</string>
     <string name="Dialog_create_terrain">Would you like to save current polygon?</string>
@@ -106,4 +106,17 @@
     <string name="stats_dialog_delete_all_stats_title">Delete ALL statistics</string>
     <string name="stats_dialog_reset_single_msg">Would you like to delete statistic?</string>
     <string name="stats_dialog_reset_single_title">Deleting of one statistic</string>
+    <string name="dummy_name">James Bond</string>
+    <string name="gravity">gravity_key</string>
+    <string name="pref_gen_gravity_summary">Earths force of gravity</string>
+    <string name="pref_gen_gravity_title">Gravity</string>
+    <string name="game_lost">You lost.</string>
+    <string name="game_won">You won!</string>
+    <string name="add_wall">Add wall</string>
+    <string name="add_hole">Add hole</string>
+    <string name="add_start_point">Add start point for ball</string>
+    <string name="add_end_point">Add goal</string>
+    <string name="undo">Undo</string>
+    <string name="save">Save</string>
+    <string name="Elements">Elements</string>
 </resources>
